--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     Hi! I am Aquib Rabbani!
     I study at MIT, Meerut.
+
+    I have worked on few CLI apps. I'll showcase it here tomorrow.
 </body>
 </html>
