--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     I study at MIT, Meerut.
 
     I have worked on few CLI apps. I'll showcase it here tomorrow.
+    I love to play Cricket
 </body>
 </html>
